[package]
name = "devcon"
version = "0.1.0"
edition = "2021"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
description = "Runs devcontainer projects."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"clap" = { version = "3.1.18", features = ["derive"] }
"shellexpand" = "2.1.0"
"serde" = { version = "1.0.135", features = ["derive"] }
"serde_json" = "1.0"
"json5" = "0.4.1"
"directories" = "4.0.1"
"toml" = "0.5.9"
